@@ -2,6 +2,8 @@
  *
  * 20/6/12
  * 	- try to make it compile on centos5
+ * 7/7/12
+ * 	- add a lock so we can run operations from many threads
  */
 
 /*
@@ -33,9 +35,6 @@
 /*
 
    TODO
-
-	should the cache be thread-private? or lock? or say operations can 
-	only be made from the main thread?
 
 	listen for invalidate
 
@@ -102,6 +101,10 @@ static GHashTable *vips_cache_table = NULL;
 /* A 'time' counter: increment on all cache ops. Use this to detect LRU.
  */
 static int vips_cache_time = 0;
+
+/* Protect cache access with this.
+ */
+static GMutex *vips_cache_lock = NULL;
 
 /* Old versions of glib are missing these. When we abandon centos 5, switch to
  * g_int64_hash() and g_double_hash().
@@ -403,10 +406,12 @@ vips_operation_equal( VipsOperation *a, VipsOperation *b )
 	return( FALSE );
 }
 
-static void
-vips_cache_init( void )
+void
+vips__cache_init( void )
 {
 	if( !vips_cache_table ) {
+		vips_cache_lock = g_mutex_new();
+
 		vips_cache_table = g_hash_table_new( 
 			(GHashFunc) vips_operation_hash, 
 			(GEqualFunc) vips_operation_equal );
@@ -441,11 +446,15 @@ vips_cache_dump_fn( void *value, void *a, void *b )
 static void
 vips_cache_dump( void )
 {
+	g_mutex_lock( vips_cache_lock );
+
 	if( vips_cache_table ) {
 		printf( "Operation cache:\n" );
 		vips_hash_table_map( vips_cache_table,
 			vips_cache_dump_fn, NULL, NULL );
 	}
+
+	g_mutex_unlock( vips_cache_lock );
 }
 
 static void *
@@ -523,6 +532,8 @@ vips_cache_first( void )
 void
 vips_cache_drop_all( void )
 {
+	g_mutex_lock( vips_cache_lock );
+
 	if( vips_cache_table ) {
 		VipsOperation *operation;
 
@@ -538,6 +549,8 @@ vips_cache_drop_all( void )
 
 		VIPS_FREEF( g_hash_table_unref, vips_cache_table );
 	}
+
+	g_mutex_unlock( vips_cache_lock );
 }
 
 static void
@@ -571,6 +584,8 @@ vips_cache_trim( void )
 {
 	VipsOperation *operation;
 
+	g_mutex_lock( vips_cache_lock );
+
 	while( vips_cache_table &&
 		(g_hash_table_size( vips_cache_table ) > vips_cache_max ||
 		vips_tracked_get_files() > vips_cache_max_files ||
@@ -582,6 +597,8 @@ vips_cache_trim( void )
 
 		vips_cache_drop( operation );
 	}
+
+	g_mutex_unlock( vips_cache_lock );
 }
 
 static void *
@@ -648,9 +665,9 @@ vips_cache_operation_buildp( VipsOperation **operation )
 	vips_object_print_dump( VIPS_OBJECT( *operation ) );
 #endif /*VIPS_DEBUG*/
 
-	vips_cache_init();
-
 	vips_cache_trim();
+
+	g_mutex_lock( vips_cache_lock );
 
 	if( (hit = g_hash_table_lookup( vips_cache_table, *operation )) ) {
 		if( vips__cache_trace ) {
@@ -665,7 +682,10 @@ vips_cache_operation_buildp( VipsOperation **operation )
 
 		*operation = hit;
 	}
-	else {
+
+	g_mutex_unlock( vips_cache_lock );
+
+	if( !hit ) {
 		if( vips__cache_trace ) {
 			if( (*operation)->nocache ) 
 				printf( "vips cache: uncacheable %p\n  ", 
@@ -678,11 +698,15 @@ vips_cache_operation_buildp( VipsOperation **operation )
 		if( vips_object_build( VIPS_OBJECT( *operation ) ) )
 			return( -1 );
 
+		g_mutex_lock( vips_cache_lock );
+
 		if( !(*operation)->nocache ) {
 			vips_cache_ref( *operation );
 			g_hash_table_insert( vips_cache_table, 
 				*operation, *operation );
 		}
+
+		g_mutex_unlock( vips_cache_lock );
 	}
 
 	return( 0 );
@@ -770,10 +794,17 @@ vips_cache_get_max( void )
 int
 vips_cache_get_size( void )
 {
+	guint size;
+
+	g_mutex_lock( vips_cache_lock );
+
+	size = 0;
 	if( vips_cache_table )
-		return( g_hash_table_size( vips_cache_table ) );
-	else
-		return( 0 );
+		size = g_hash_table_size( vips_cache_table );
+
+	g_mutex_unlock( vips_cache_lock );
+
+	return( size );
 }
 
 /**
